--- a/jpgconverter.html
+++ b/jpgconverter.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image to JPG Converter | Convert Multiple Formats Online</title>
-    <meta name="description" content="Convert PNG, GIF, WEBP, HEIC, and other formats to JPG instantly. Free online image converter with high-quality results and fast processing.">
+    <title>Image to JPG Converter | Free JPG Converter – Convert PNG, GIF, TIF, PSD, SVG, WEBP, HEIC & RAW to JPG Online</title>
+    <meta name="description" content="Convert PNG, GIF, WEBP, HEIC, and other formats to JPG instantly. Free online image JPG converter with high-quality results and fast processing.">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
