--- a/index.html
+++ b/index.html
@@ -190,13 +190,14 @@
             <button class="category-btn">Converters</button>
         </div>
 
-        <div class="tools-grid">
-            <!-- Image Tools -->
-            <div class="tool-card">
-                <i class="fas fa-file-image tool-icon"></i>
-                <h3>Image Converter</h3>
-                <p>Convert between JPG, PNG, WEBP, and more</p>
-            </div>
+       <div class="tools-grid">
+    <!-- Image Tools -->
+    <a href="your-image-converter-link.html" class="tool-card">
+        <i class="fas fa-file-image tool-icon"></i>
+        <h3>Image Converter</h3>
+        <p>Convert between JPG, PNG, WEBP, and more</p>
+    </a>
+</div>
 
             <div class="tool-card">
                 <i class="fas fa-compress tool-icon"></i>
